monolithicappwithoutregistry/monolithicappwithoutregistry-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolithicappwithoutregistry
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monolithicappwithoutregistry
      version: "v1"
  template:
    metadata:
      labels:
        app: monolithicappwithoutregistry
        version: "v1"
    spec:
      containers:
      - name: monolithicappwithoutregistry-app
        image: tanjie123/monolithicappwithoutregistry
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /management/health
            port: http
          initialDelaySeconds: 20
          periodSeconds: 15
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /management/health
            port: http
          initialDelaySeconds: 120
