monolithicappwithoutregistry/monolithicappwithoutregistry-service.yml
apiVersion: v1
kind: Service
metadata:
  name: monolithicappwithoutregistry
  namespace: default
  labels:
    app: monolithicappwithoutregistry
spec:
  selector:
    app: monolithicappwithoutregistry
  type: ClusterIP
  ports:
  - name: http
    port: 8080
